syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.amaytechnosystems";
option java_outer_classname = "BaseObject";
import "enum/Enums.proto";
import "google/protobuf/timestamp.proto";

package com.proto.baseobject;

message ADevice{
  string deviceId=1;
  string deviceType=2;
  string deviceSeq=3;
}

message ATicket{
  string ticketNumber = 1;
  string orderId = 2;
  string transactionId = 3;
  string transactionUk = 4;
  string ticketIssue = 5;
  string ticketExp = 6;

  string sourceStation = 13;
  string destinationStation = 14;

  string language = 18;
  double amount = 19;
  double discount = 20;
  bool isActive = 26;
  string ticketType = 27;
  int32 quantity = 28;

  string status = 29;
  string paymentMode = 30;
  string qrData = 31;

}

message AVersion{
  string softwareVer=1;
  string ticketVer=2;
  string faretableVer=3;

}

message AOperator{
  string operatorId=1;
  string shiftId = 21;

}

message AStation{
  string stationId=1;
  string lineId=2;
}

message ALine{
  string lineId=1;
  string lineName=2;
  string lineColor=3;
}

message AShift{
  string shiftId=1;
  google.protobuf.Timestamp shiftStart = 3;
  google.protobuf.Timestamp shiftEnd = 4;
  com.proto.enum.ShiftStatus currentStatus =5;
}
message ATransaction{
  string transactionId = 1;
  string orderId = 2;
//  string ticketNumber = 3;
  string transactionUk = 4;
  string transactionType = 5;
  string transactionStatus = 6;
  string transactionMode = 7;
  string transactionTime = 8;
  string transactionAmount = 9;
  string transactionDiscount = 10;
//  string transactionCurrency = 11;
//  string transactionDevice = 12;
//  string transactionOperator = 13;
//  string transactionStation = 14;
//  string transactionLine = 15;
//  string transactionShift = 16;
//  string transactionShiftStart = 17;
//  string transactionShiftEnd = 18;
//  string transactionShiftStatus = 19;
//  string transactionShiftId = 20;
//  string transactionShiftStartStr = 21;
//  string transactionShiftEndStr = 22;
//  string transactionShiftStatusStr = 23;
}

message AdjustedTicket {
  string orderId = 1;
  string adjustId = 2;
  com.proto.enum.AdjustmentType adjustmentType = 3;
  string encryptedQR = 4;
  string issueTime = 5;
  string entryTime = 6;
  string exitTime = 7;
  string destination = 8;
  string ticketNumber = 9;
  string reason = 12;
  com.proto.enum.adjustmentArea area = 13; // paid or unpaid
  google.protobuf.Timestamp createdAt = 16;
  google.protobuf.Timestamp updatedAt = 17;
  google.protobuf.Timestamp transactionTime = 18;
}

message ACancelTicket{
  string ticketNumber = 1;
  string orderId = 2;
  google.protobuf.Timestamp updatedAt = 3;
}

message AReplaceTicket{
  string ticketNumber = 1;
  string orderId = 2;
  string replacedId = 3;
  google.protobuf.Timestamp time = 4;
}

message AFareMedia{
  string sjt=1;
  string rjt=2;
  string group=3;
  string free=4;
  string paid=5;
}

message ARevenue{
  string qrRevenue=1;
  string cscRevenue=2;
  string totalRevenue=3;
}

message AStock{
  int32 qrStock=1;
  int32 cscStock=2;
  int32 qrSales=3;
  int32 cscSales=4;
  int32 cash=5;
  google.protobuf.Timestamp time = 6;
}

