syntax = "proto3";

package com.proto.scu.object;

option java_multiple_files = true;
option java_package = "org.amaytechnosystems";
option java_outer_classname = "SCURevenueProto";


import "meta/RequestMetaData.proto";
import "meta/ResponseMetaData.proto";
import "object/BaseObject.proto";


message RevenueData {
  baseobject.ADevice device=1;
  baseobject.ARevenue revenue=2;
}

message SCURevenueReportRequestV1 {
  baseobject.ADevice device=1;
  string fromDate=2;
  meta.reqmetadata.RequestMetaData requestMetaData = 3;
}

message SCURevenueReportResponseV1 {
  string lastTransactionTime = 3;
  RevenueData revenueData = 2;
  meta.respmetadata.ResponseMetaData responseMetaData = 1;
}