syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.amaytechnosystems";
option java_outer_classname = "SCUFareMedia";


import "meta/RequestMetaData.proto";
import "meta/ResponseMetaData.proto";
import "object/BaseObject.proto";
//import "enum/Enums.proto";


package com.proto.scu.object;


message SCUFareMediaData {
  baseobject.ADevice device=1;
  baseobject.AFareMedia fareMediaCount =4;
}

message SCUFareMediaRequestV1 {
  baseobject.ADevice device=1;
  meta.reqmetadata.RequestMetaData requestMetaData = 2;

}

message SCUFareMediaResponseV1 {
  SCUFareMediaData scuFareMediaData = 2;
  meta.respmetadata.ResponseMetaData responseMetaData = 1;
}